fix: header z-index

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -4,6 +4,7 @@
   height: auto;
   position: fixed;
   top: 0;
+  z-index: 99;
   box-shadow: 0 3px 5px rgb(57 63 72 / 30%);
 }
 
